Updated Dockerfile and requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,21 +6,15 @@ imageio==2.15.0
 ipdb==0.13.9
 ipython==8.0.1
 ipython-genutils==0.2.0
-ipympl==0.7.0
 jupyterlab==3.0.6
 jupyter-client==6.1.11
 jupyter-core==4.7.1
-JLDracula==0.1.
-matplotlib==3.2.2
+JLDracula==0.1.0
 numpy==1.21.2
 Pillow==9.0.1
-scikit_image==0.15.0
 scipy==1.6.3
 scikit-learn==0.24.1
-seaborn==0.11.2
-tabulate==0.8.9
-torch==1.10.0
-torchvision==0.11.1
+torchvision==0.11.3
 tqdm==4.62.1
 Sphinx==1.8.6
 wrapt==1.12.1
